fix z-index

--- a/app/frontend/stylesheets/object/project/_ResultsView.sass
+++ b/app/frontend/stylesheets/object/project/_ResultsView.sass
@@ -28,7 +28,7 @@
       > .button-view
         top:4px
         height: 16px
-        z-index: $Z_INDEX_BASE
+        z-index: var(--z-index-base)
   > .tablecontainer
     overflow-x: auto
     overflow-y: hidden
